chore: Actions 워크플로 개선 (#409)
* chore: 빌드 워크플로 분리

* chore: 워크플로 조건 변경

* chore: 다운로드 오류 수정

* chore: env 변수화

* chore: 개발 버전 배포 개선

* chore: 버그 수정

* chore: 권한 수정

* chore: 체크 워크플로 추가

* chore: 이름 변경

* fix: lint 오류 수정

* chore: 스토리북 배포에도 파일 무시 추가

* chore: 워크플로 변경은 무시 예외로

* chore: push시 check 비활성화

* chore: environment 다시 추가

* chore: summary 제공

* chore: summary 포맷 변경

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,9 +1,15 @@
 name: Storybook Deployment
 
 on:
-  pull_request:
   push:
-    branches: [main, develop]
+    branches: [main]
+  pull_request:
+    branches: [main]
+    paths-ignore:
+      - '**.md'
+      - '.github/**/!(*.yml)'
+      - '.husky/**/*'
+      - '.vscode/**/*'
 
 jobs:
   chromatic-deploy:
@@ -15,11 +21,13 @@ jobs:
           #if use checkout@v2, https://github.com/marketplace/actions/publish-to-chromatic#checkout-depth
           fetch-depth: 0
 
-      - name: Yarn Cache
-        uses: c-hive/gha-yarn-cache@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'yarn'
 
       - name: Install Dependency
-        run: yarn install
+        run: yarn install --immutable
 
       - name: Publish Chromatic
         id: publish_chromatic
