--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sopt.org-project",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "playground-common"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,8 +16,11 @@
     "build-storybook": "build-storybook",
     "postinstall": "husky install",
     "typecheck": "tsc --noemit -p .",
+    "check": "conc \"yarn:lint\" \"yarn:typecheck\" \"yarn:stylelint\"",
     "analyze": "cross-env ANALYZE=true next build",
-    "check": "conc \"yarn:lint\" \"yarn:typecheck\" \"yarn:stylelint\""
+    "playground-common:build": "tsup --config ./playground-common/tsup.config.ts",
+    "playground-common:publish": "yarn playground-common:build && yarn workspace @sopt-makers/playground-common npm publish --access=public"
+    
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.6.7",
@@ -93,6 +99,7 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "tsup": "^6.5.0",
     "typescript": "4.6.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0"
