--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -26,7 +26,7 @@ jobs:
           name: built-app
           path: out
       - name: Publish
-        run: yarn dlx wrangler pages publish "out" --project-name "${{ secrets.CF_PAGES_NAME_PRODUCTION }}" --commit-message " "
+        run: yarn dlx wrangler pages publish "out" --project-name "${{ vars.CF_PAGES_NAME_PRODUCTION }}" --commit-message " "
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
