chore: 액션 path filter 수정 (#428)
* chore: path filter 수정

* chore: 필터 이름 변경

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,20 +9,23 @@ jobs:
   should-check:
     runs-on: ubuntu-latest
     outputs:
-      repo-settings: ${{ steps.filter.outputs.repo-settings }}
+      skip: ${{ steps.filter.outputs.to-skip_count == steps.filter.outputs.every_count }}
     steps:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
           filters: |
-            repo-settings:
-              - '**/!(*.md)'
-              - '!.github/**/!(*.yml)'
-              - '!.husky/**/*'
-              - '!.vscode/**/*'
+            to-skip:
+              - '**/*.md'
+              - '.github/**/!(*.yml)'
+              - '.husky/**/*'
+              - '.vscode/**/*'
+            every:
+              - '**/*'
+
   check:
     needs: should-check
-    if: ${{ needs.should-check.outputs.repo-settings == 'true' }}
+    if: ${{ needs.should-check.outputs.skip }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Branch
