refactor: headless-ui => radix-ui로 마이그레이션

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@badrap/bar-of-progress": "^0.2.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
     "@next/bundle-analyzer": "^13.1.1",
     "@radix-ui/react-collapsible": "^1.0.1",
@@ -36,6 +35,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
+    "cmdk": "^0.1.21",
     "dayjs": "^1.11.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "focus-trap-react": "^10.0.2",
