--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "playground-common"
   ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "stylelint": "stylelint **/*.(ts|tsx)",
-    "prettier": "prettier --write .",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "postinstall": "husky install",
-    "typecheck": "tsc --noemit -p .",
-    "check": "conc \"yarn:lint\" \"yarn:typecheck\" \"yarn:stylelint\"",
     "analyze": "cross-env ANALYZE=true next build",
+    "build": "next build",
+    "build-storybook": "build-storybook",
+    "check": "conc \"yarn:lint\" \"yarn:typecheck\" \"yarn:stylelint\"",
+    "dev": "next dev",
+    "postinstall": "husky install",
+    "lint": "next lint",
     "playground-common:build": "tsup --config ./playground-common/tsup.config.ts",
-    "playground-common:publish": "yarn playground-common:build && yarn workspace @sopt-makers/playground-common npm publish --access=public"
+    "playground-common:publish": "yarn playground-common:build && yarn workspace @sopt-makers/playground-common npm publish --access=public",
+    "prettier": "prettier --write .",
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "stylelint": "stylelint **/*.(ts|tsx)",
+    "typecheck": "tsc --noemit -p ."
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.6.7",
@@ -28,17 +28,13 @@
     "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
-    "@next/bundle-analyzer": "^13.1.1",
     "@radix-ui/react-collapsible": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
-    "@types/react-datepicker": "^4.8.0",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.1.3",
     "lodash-es": "^4.17.21",
@@ -54,7 +50,6 @@
     "react-remove-scroll": "^2.5.5",
     "react-spinners": "^0.13.4",
     "recoil": "^0.7.2",
-    "storybook-addon-next-router": "^4.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -63,6 +58,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@mdx-js/react": "^1.6.22",
+    "@next/bundle-analyzer": "^13.1.1",
     "@storybook/addon-actions": "^6.5.5",
     "@storybook/addon-docs": "^6.5.5",
     "@storybook/addon-essentials": "^6.5.5",
@@ -76,7 +72,9 @@
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "babel-loader": "^8.2.5",
     "chromatic": "^6.7.0",
     "concurrently": "^7.6.0",
@@ -84,6 +82,7 @@
     "eslint": "^8.13.0",
     "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-storybook": "^0.5.12",
     "husky": "^7.0.0",
     "msw": "^0.39.2",
@@ -93,6 +92,7 @@
     "prettier": "2.6.2",
     "sass-loader": "^12.6.0",
     "storybook": "^6.5.5",
+    "storybook-addon-next-router": "^4.0.0",
     "storybook-dark-mode": "^1.1.0",
     "stylelint": "^14.7.1",
     "stylelint-config-concentric-order": "^5.0.0",
