--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^6.2.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-datepicker": "^4.8.0",
