--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-query": "^3.38.0",
     "react-remove-scroll": "^2.5.5",
     "recoil": "^0.7.2",
-    "yup": "^0.32.11"
+    "storybook-addon-next-router": "^4.0.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
