feat: pipefail 추가

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Check All
         run: |
+          set -o pipefail
           yarn check | tee check.log
 
       - name: Print Summary
