--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-remove-scroll": "^2.5.5",
     "recoil": "^0.7.2",
     "storybook-addon-next-router": "^4.0.0",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
