chore: react query v4 패키지 설치

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
+    "@tanstack/react-query": "^4.27.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "focus-trap-react": "^10.0.2",
