--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^6.2.1",
+    "@tanstack/react-query-devtools": "^4.27.0",
     "@types/jest": "^29.4.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "17.0.25",
