--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@tanstack/react-query": "^4.27.0",
+    "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "focus-trap-react": "^10.0.2",
