--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tsup": "^6.5.0",
-    "typescript": "4.6.3",
+    "typescript": "^5.0.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0"
   },
