--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tsup": "^6.5.0",
-    "typescript": "4.6.3",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0"
   },
