--- a/package.json
+++ b/package.json
@@ -113,9 +113,10 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-styled-components": "^0.1.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tsup": "^6.5.0",
-    "typescript": "4.6.3",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0"
   },
