feat & refactor: 프로젝트 업로드 > 멤버 폼 추가 (#633)
* feat: 의존성 주입 강의

* feat: useMemberSearch 훅에 react query 로직 추가

* feat: MemberSearch 로직 마이그레이션

* chore: 멤버검색 스타일 수정

* chore: api Member type 변경

* feat: MemberField 데스크탑 ui 추가

* chore: story type error 수정

* feat: 검색어 debounce 추가

* chore: react-hook-form 버전 업데이트

* feat: MemberSearch 구조 변경

* feat: MemberField 구조 변경, 디자인 모바일과 통일화

* feat: 스키마 추가, 테스트 페이지 추가

* fix: MemberSearch clear 될 때는 debounce 되지 않도록 수정

* feat: 모바일 디자인 변경 대응

* feat: 에러처리 추가

* chore: console.log 제거

* fix: 에러처리 로직 및 ui 수정

* chore: import 병합

* fix: memberId type 변경하여 ts-ignore 제거

* feat: 바뀐 api 페칭 인터페이스 적용

* chore: MemberField  Value 타입 변경 대응

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query": "^4.27.0",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
+    "cmdk": "^0.2.0",
     "dayjs": "^1.11.3",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.1.3",
@@ -53,7 +54,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.5",
+    "react-hook-form": "^7.43.9",
     "react-markdown": "^8.0.4",
     "react-remove-scroll": "^2.5.5",
     "recoil": "^0.7.2",
