feat: 채널톡 연동

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,4 @@ NEXT_PUBLIC_API_URL=https://playground.dev.sopt.org
 NEXT_PUBLIC_DEBUG=true
 NEXT_PUBLIC_GTM_ID=GTM-KJHR376
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
+NEXT_PUBLIC_CHANNEL_TALK_PLUGIN_KEY=
