--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "stylelint": "stylelint **/*.(ts|tsx)",
-    "typecheck": "tsc --noemit -p ."
+    "typecheck": "tsc --noemit -p .",
+    "msw": "cross-env MOCKING=true next dev"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.10.4",
@@ -101,7 +102,7 @@
     "husky": "^7.0.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
-    "msw": "^0.39.2",
+    "msw": "^1.2.2",
     "msw-storybook-addon": "^1.6.3",
     "postcss-html": "^1.4.1",
     "postcss-syntax": "^0.36.2",
