--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,19 @@
     "source.fixAll": true
   },
   "typescript.preferences.importModuleSpecifier": "non-relative",
-  "cSpell.words": ["appjam", "hookform", "JOINTSEMINAR", "sopkathon", "Sopt", "SOPTERM", "Mbti", "MBTI", "mbti"],
+  "cSpell.words": [
+    "appjam",
+    "hookform",
+    "JOINTSEMINAR",
+    "sopkathon",
+    "Sopt",
+    "SOPTERM",
+    "Mbti",
+    "MBTI",
+    "mbti",
+    "wordchain",
+    "Wordchain",
+    "WORDCHAIN"
+  ],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
