chore: 스토리북에서 env 추가

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install Dependency
         run: yarn install --immutable
 
+      - name: Set .env
+        run: echo "${{ vars.DEVELOPMENT_ENV }}" > .env.local
+
       - name: Publish Chromatic
         id: publish_chromatic
         uses: chromaui/action@v1
