--- a/package.json
+++ b/package.json
@@ -91,10 +91,10 @@
     "chromatic": "^6.7.0",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.13.0",
-    "eslint-config-next": "^13.1.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.12",
     "husky": "^7.0.0",
     "jest": "^29.4.3",
@@ -103,7 +103,7 @@
     "msw-storybook-addon": "^1.8.0",
     "postcss-html": "^1.4.1",
     "postcss-syntax": "^0.36.2",
-    "prettier": "2.6.2",
+    "prettier": "^2.8.8",
     "sass-loader": "^12.6.0",
     "storybook": "^7.0.23",
     "storybook-dark-mode": "^3.0.0",
