--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-modal-sheet": "^1.10.2",
     "react-remove-scroll": "^2.5.6",
     "recoil": "^0.7.2",
+    "swiper": "^9.4.1",
     "yup": "^1.0.0",
     "zod": "^3.20.6"
   },
