--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^6.2.1",
     "@tanstack/react-query-devtools": "^4.27.0",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "17.0.25",
