--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.5",
+    "@sopt-makers/colors": "^1.0.0",
     "@tanstack/react-query": "^4.27.0",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
