--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "^13.1.1",
+    "next-seo": "^6.1.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
