fix: radix-ui 버전 고정

--- a/playground-common/package.json
+++ b/playground-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sopt-makers/playground-common",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -17,9 +17,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@radix-ui/react-dialog": "^1.0.2",
-    "@radix-ui/react-dropdown-menu": "^2.0.2",
-    "react-remove-scroll": "^2.5.5"
+    "@radix-ui/react-dialog": "1.0.2",
+    "@radix-ui/react-dropdown-menu": "2.0.2",
+    "react-remove-scroll": "2.5.5"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
