--- a/package.json
+++ b/package.json
@@ -83,12 +83,15 @@
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^6.2.1",
     "@tanstack/react-query-devtools": "^4.27.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.1",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "babel-loader": "^9.1.2",
     "chromatic": "^6.7.0",
@@ -100,7 +103,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.12",
     "husky": "^7.0.0",
-    "jest": "^29.4.3",
+    "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.4.3",
     "msw": "^0.39.2",
     "msw-storybook-addon": "^1.8.0",
