--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "^13.1.1",
+    "next-query-params": "^4.2.3",
     "next-seo": "^6.1.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
@@ -62,6 +63,7 @@
     "react-remove-scroll": "^2.5.6",
     "recoil": "^0.7.2",
     "swiper": "^9.4.1",
+    "use-query-params": "^2.2.1",
     "yup": "^1.0.0",
     "zod": "^3.20.6"
   },
