--- a/playground-common/package.json
+++ b/playground-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sopt-makers/playground-common",
-  "version": "1.2.2",
+  "version": "1.3.2",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.8.1",
     "@radix-ui/react-dialog": "1.0.2",
     "@radix-ui/react-dropdown-menu": "2.0.2",
+    "@sopt-makers/colors": "^2.2.0",
     "react-remove-scroll": "2.5.5"
   },
   "peerDependencies": {
