--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@sopt-makers/colors": "^2.2.0",
-    "@tanstack/react-query": "^4.27.0",
+    "@tanstack/react-query": "^5.4.3",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
     "cmdk": "^0.2.0",
@@ -84,10 +84,11 @@
     "@storybook/testing-library": "^0.2.0",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^6.2.1",
-    "@tanstack/react-query-devtools": "^4.27.0",
+    "@tanstack/react-query-devtools": "^5.4.3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/jscodeshift": "^0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
@@ -107,6 +108,7 @@
     "husky": "^7.0.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.4.3",
+    "jscodeshift": "^0.15.1",
     "msw": "^0.39.2",
     "msw-storybook-addon": "^1.8.0",
     "postcss-html": "^1.4.1",
