--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.5",
-    "@sopt-makers/colors": "^2.2.0",
+    "@sopt-makers/colors": "^3.0.0",
     "@tanstack/react-query": "^4.27.0",
     "@toss/emotion-utils": "^1.1.10",
     "await-to-js": "^3.0.0",
@@ -73,6 +73,7 @@
     "@cloudflare/workers-types": "^3.18.0",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@emotion/babel-preset-css-prop": "^11.11.0",
     "@mdx-js/react": "^1.6.22",
     "@next/bundle-analyzer": "^13.1.1",
     "@storybook/addon-actions": "^7.0.23",
