--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.0.5",
     "@sopt-makers/colors": "^3.0.0",
     "@tanstack/react-query": "^5.4.3",
+    "@toss/use-overlay": "^1.3.6",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
     "cmdk": "^0.2.0",
