--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sopt-makers/colors": "^3.0.0",
     "@sopt-makers/fonts": "^1.0.0",
     "@tanstack/react-query": "^5.4.3",
+    "@toss/emotion-utils": "^1.1.10",
     "@toss/use-overlay": "^1.3.6",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
@@ -74,6 +75,7 @@
     "@cloudflare/workers-types": "^3.18.0",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@emotion/babel-preset-css-prop": "^11.11.0",
     "@mdx-js/react": "^1.6.22",
     "@next/bundle-analyzer": "^13.1.1",
     "@storybook/addon-actions": "^7.0.23",
