--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-markdown": "^8.0.4",
     "react-modal-sheet": "^1.10.2",
     "react-remove-scroll": "^2.5.6",
+    "react-textarea-autosize": "^8.5.3",
     "recoil": "^0.7.2",
     "swiper": "^9.4.1",
     "use-query-params": "^2.2.1",
