--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-modal-sheet": "^1.10.2",
     "react-remove-scroll": "^2.5.6",
     "react-textarea-autosize": "^8.5.3",
+    "react-virtuoso": "^4.6.2",
     "recoil": "^0.7.2",
     "swiper": "^9.4.1",
     "use-query-params": "^2.2.1",
