--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@sopt-makers/fonts": "^1.0.0",
     "@tanstack/react-query": "^5.4.3",
     "@toss/emotion-utils": "^1.1.10",
+    "@toss/error-boundary": "^1.4.6",
     "@toss/use-overlay": "^1.3.6",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
