--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tanstack/react-query": "^5.4.3",
     "@toss/emotion-utils": "^1.1.10",
     "@toss/error-boundary": "^1.4.6",
+    "@toss/impression-area": "^1.3.1",
     "@toss/use-overlay": "^1.3.6",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
