fix: changeset 설치 위치를 playground-common으로 이동

--- a/playground-common/package.json
+++ b/playground-common/package.json
@@ -15,6 +15,7 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@changesets/cli": "^2.27.5",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@radix-ui/react-dialog": "1.0.2",
