--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,4 @@ NEXT_PUBLIC_DEBUG=true
 NEXT_PUBLIC_GTM_ID=GTM-KJHR376
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
 NEXT_PUBLIC_CHANNEL_TALK_PLUGIN_KEY=
+NEXT_PUBLIC_KAKAO_TALK_PLUGIN_KEY="84d6ee39346601caee2fe53f58067eb9"
