--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^1.10.4",
     "@badrap/bar-of-progress": "^0.2.2",
+    "@egjs/react-infinitegrid": "^4.12.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.6.6",
