feat: 광고 구좌 구현

--- a/package.json
+++ b/package.json
@@ -72,9 +72,11 @@
     "react-markdown": "^8.0.4",
     "react-modal-sheet": "^1.10.2",
     "react-remove-scroll": "^2.5.6",
+    "react-slick": "^0.30.2",
     "react-textarea-autosize": "^8.5.3",
     "react-virtuoso": "^4.6.2",
     "recoil": "^0.7.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.4.1",
     "use-query-params": "^2.2.1",
     "yup": "^1.0.0",
@@ -108,6 +110,8 @@
     "@types/react": "18.0.5",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.1",
+    "@types/react-slick": "^0.23.13",
+    "@types/slick-carousel": "^1",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "babel-loader": "^9.1.2",
