feat: Lottie 파일 및 라이브러리 추가

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "html2canvas": "^1.4.1",
     "immer": "^10.0.4",
     "lodash-es": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "nanoid": "^4.0.0",
     "next": "^13.1.1",
     "next-query-params": "^4.2.3",
@@ -70,6 +71,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.43.9",
+    "react-lottie": "^1.2.4",
     "react-markdown": "^8.0.4",
     "react-modal-sheet": "^1.10.2",
     "react-remove-scroll": "^2.5.6",
@@ -111,6 +113,7 @@
     "@types/react": "18.0.5",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.1",
+    "@types/react-lottie": "^1",
     "@types/react-slick": "^0.23.13",
     "@types/slick-carousel": "^1",
     "@types/testing-library__jest-dom": "^6.0.0",
