feat: 메뉴 탭 바 구현

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-markdown": "^8.0.4",
     "react-modal-sheet": "^1.10.2",
     "react-remove-scroll": "^2.5.6",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-textarea-autosize": "^8.5.3",
     "react-virtuoso": "^4.6.2",
@@ -114,6 +115,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.1",
     "@types/react-lottie": "^1",
+    "@types/react-scroll": "^1",
     "@types/react-slick": "^0.23.13",
     "@types/slick-carousel": "^1",
     "@types/testing-library__jest-dom": "^6.0.0",
