--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "jsx": "preserve",
     "jsxImportSource": "@emotion/react"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.setup.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.setup.ts", "src/components/mySoptReport/ReportCard/CardHeader"],
   "exclude": ["node_modules", "functions/**/*", "worker/**/*"]
 }
